--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,6 @@
 test.ipynb
 config.py
-inlines.py
-__pycache__/config.cpython-310.pyc
-__pycache__/default_messages.cpython-310.pyc
-__pycache__/jokes.cpython-310.pyc
+__pycache__/*
 bot/pyvenv.cfg
 bot/*
 bot.service
